force-app/main/default/objects/IDR_Notification_Preference__c/IDR_Notification_Preference__c.object-meta.xml
<CustomObject>
    <description>USed by banker to define  the notification prefernece</description>
    <label>Notification Preference</label>
    <nameField>
        <displayFormat>NP-{00000}</displayFormat>
        <label>Notification Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Preferences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>