force-app/main/default/objects/IDR_Notification_Preference__c/fields/Case_Flag__c.field-meta.xml
<CustomField>
    <fullName>Case_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Flag</label>
    <type>Checkbox</type>
</CustomField>