force-app/main/default/objects/IDR_Notification_Preference__c/fields/In_App__c.field-meta.xml
<CustomField>
    <fullName>In_App__c</fullName>
    <defaultValue>true</defaultValue>
    <label>In-App</label>
    <type>Checkbox</type>
</CustomField>