force-app/main/default/objects/IDR_Notification_Preference__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>User Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>