force-app/main/default/objects/IDR_Notification_Preference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>In_App__c</columns>
    <columns>Case_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>